syntax = "proto3";

package helloworld;

import "google/protobuf/empty.proto";
import "natsrpc/natsrpc.proto";
import "annotation.proto";

option go_package = "github.com/liuwangchen/toy/transport/examples/helloworld/pb";

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply)  {
    option (natsrpc.sequence) = true;
  }

  rpc MultiSayHello (HelloRequest) returns (stream HelloReply)  {
  }
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Pusher {
  // Sends a greeting
  option (natsrpc.topic) = "{{.Id}}";
  rpc Push (PushNotify) returns (google.protobuf.Empty)  {
    //    option (kafka.queue) = "haha";
    //    option (kafka.autoAck) = false;
  }
}

message PushNotify {
  string name = 1;
}
